[project]
name = "comfyui_mira"
description = "Nodes:Integer Multiplier, Float Multiplier, Convert Numeral to String, Create Canvas Advanced, Create Canvas, Create PNG Mask, Color Mask to HEX String, Color Mask to INT RGB, Color Masks to List"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/mirabarukaso/ComfyUI_Mira"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Mira"
Icon = ""
